ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "12h"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: nginx-ingress
spec:
  rules:
    - host: countries.incLab.com 
      http:
        paths:
          - path: /countries
            backend:
              serviceName: countries-svc
              servicePort: 8000
    - host: airports.incLab.com
      http:
        paths:
          - path: /airports
            backend:
              serviceName: airports-svc
              servicePort: 8000
          - path: /search
            backend:
              serviceName: airports-svc
              servicePort: 8000

          - path:
            backend:
              serviceName: helm-jenkin-helm-jenkins
              servicePort: 8080
